# Stylnux-Web-app

./: manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
ecom_app/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
likes/: admin.py
likes/migrations/: 0001_initial.py  0002_initial.py
src/: App.js  index.js
src/components/: header.js
src/json/: nav.js
src/layouts/: default_layout.js
src/pages/: 404.js  account.js  home.js  login.js  products.js  register.js
src/styles/: header.scss
store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_initial.py  0002_rename_unit_price_orderitem_price_delete_payment.py  0003_rename_id_cart__id_alter_product_promotions.py
tags/: models.py
tags/migrations/: 0001_initial.py
tests/: forgotpasswordtest.py  logintest.py  registertest.py  resetpasswordtest.py  testemailverification.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
